Release notes for xmlBlaster (http://www.xmlBlaster.org)
The "r99999" numbers are Subversion revision numbers.

Changes for current svn
=======================
 o 18256 made the callback queue block (default 1 minute) in case the thread pool is exhausted. It
   can be configured with:
      dispatch/callback/maxWaitTime 60000
   and should be used in conjunction with a customized specific pool size:
      dispatch/callback/maximumPoolSize 20
 
 o 18255 2017-03-21 Avoid dependency on "org.apache.commons.lang"
   In JdbcConnectionPool.java replaced StrTokenizer with StringTokenizer
 
 o 18253 2017-01-03 Mime plugin DropIfNotDeliverableUniqueOnly supports MD5SUM check
   MimeAccessPlugin[DropIfNotDeliverableUniqueOnly][1.0]=org.xmlBlaster.contrib.mime.DropIfNotDeliverableUniqueOnly,useMd5Sum=true
   With useMd5Sum=true the content of most current message is checked if it is identical to previous and suppressed

 o 18248 2016-11-26 Administrative SessionInfo MsgUnit[] get() added

 o 18247 2016-11-26 startsWith events added "topicStartsWith/hello.2/event/subscribe"
 
 o 18241 Replication: added interface I_StatementInjector to allow own implementations for objects of type OTHER (as for example SDO_GEOMETRY in ORACLE) 

 o 18235 Property.java 2016-08-16 marcel
   Nicer logging during xmlBlaster.properties lookup"

 o 18232 email 2016-06-29
   Extended to support sending HTML emails "text/html; charset=utf-8" also if mail has attachments

 o 18229 email 2016-06-08
   Extended to support sending HTML emails "text/html; charset=utf-8"

 o 18228 Mail 2016-06-08
   Update lib/mail.jar from 1.3.3 to 1.5.5 https://java.net/downloads/javamail/javax.mail.jar
 
 o 18226 SubscriptionInfo 2016-05-27
   Exception handling for invalid subscription ID

 o 18223 Replication: added replication.prioDeliveryOnInitial which allows to send high prio messages during initial phase also on very first time
